# snekkja

./: .gitignore  Cargo.toml
benches/: bench.rs
benchmarks/: Cargo.toml  samples.txt
benchmarks/benches/: bench.rs  bench_mixed.rs  bench_type_10.rs  bench_type_12.rs  bench_type_14.rs  bench_type_15.rs  bench_type_16.rs  bench_type_18.rs  bench_type_19.rs  bench_type_1_2_3.rs  bench_type_20.rs  bench_type_21.rs  bench_type_22.rs  bench_type_23.rs  bench_type_24.rs  bench_type_25.rs  bench_type_27.rs  bench_type_4.rs  bench_type_5.rs  bench_type_6.rs  bench_type_7_13.rs  bench_type_8.rs  bench_type_9.rs
benchmarks/samples/: samples_type_10.txt  samples_type_15.txt  samples_type_16.txt  samples_type_20.txt  samples_type_25.txt  samples_type_27.txt  samples_type_6.txt  samples_type_7_13.txt  samples_type_8.txt
benchmarks/src/: lib.rs
src/: checksum.rs  errors.rs  lib.rs  parser.rs  types.rs
src/messages/: addressed_safety_message.rs  aid_to_navigation_report.rs  assignment_mode_command.rs  base_station_report.rs  binary_acknowledge.rs  binary_addressed_message.rs  binary_broadcast_message.rs  channel_management.rs  class_b_position_report.rs  class_b_static_data.rs  data_link_management.rs  extended_class_b_position_report.rs  group_assignment_command.rs  interrogation.rs  long_range_position_report.rs  mod.rs  position_report.rs  safety_broadcast_message.rs  sar_aircraft_position_report.rs  single_slot_binary_message.rs  static_voyage_data.rs  unarmor.rs  utc_date_inquiry.rs  utils.rs
tests/: messages.rs
tests/snapshots/: messages__base_station_report.snap  messages__position_report_not_available_fields.snap  messages__position_report_type1.snap  messages__position_report_type3_itdma.snap  messages__type10_utc_date_inquiry.snap  messages__type11_utc_date_response.snap  messages__type12_plain_text.snap  messages__type12_retransmitted.snap  messages__type13_one_destination.snap  messages__type13_two_destinations.snap  messages__type14_distress_broadcast.snap  messages__type14_navigation_warning.snap  messages__type15_one_station_one_type.snap  messages__type15_one_station_two_types.snap  messages__type15_two_stations_one_type_each.snap  (+76 more)
(+10 files in other folders)
