[package]
name = "snekkja"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = "0.8.2"

[dev-dependencies]
insta = "1"
test-case = "3.3.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
opt-level = 3
codegen-units = 1
debug-assertions = false
split-debuginfo = "off"

[[bench]]
name = "bench"
harness = false
