[package]
name = "snekkja"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
insta = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
opt-level = 3
codegen-units = 1
debug-assertions = false
split-debuginfo = "off"

[workspace]
members = ["benchmarks"]
